--- a/stylesCSS/nav-bar.css
+++ b/stylesCSS/nav-bar.css
@@ -5,12 +5,13 @@
     box-sizing: border-box;
 }
 .header {
-    background-image: linear-gradient(to right, #a0ffe3, #E5E5E5);
+    background-color: #85FFBD;
+    background-image: linear-gradient(101deg, #a6ffd0 50%, #FFFB7D 100%);     
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    padding: 35px 60px;
+    padding: 15px 60px;
 }
 .logo-lordOfRings {
     width: 250px;
@@ -26,7 +27,7 @@
 }
 #menu-header ul li a{
     font-family: 'ABeeZee', sans-serif;
-    font-size: 28px;
+    font-size: 24px;
     color: black;
     padding: 0px 35px;
     display: inline-block;
@@ -36,5 +37,5 @@
 #menu-header ul li a:hover {
     text-decoration: underline darkgreen;
     text-decoration-thickness: 5px;
-    text-underline-offset: 25px;
+    text-underline-offset: 20px;
 }
