--- a/stylesCSS/banner.css
+++ b/stylesCSS/banner.css
@@ -11,32 +11,34 @@
     background-position: 20vh 64vh;
 }
 .banner {
-    box-shadow: 0vh 0.3vh 1vh black;
+    box-shadow: inset 0vh 0.1vh 1vh black;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    padding: 0px 350px;
+    padding: 0px 15px;
 }
-.banner-title {
+.banner-title{
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 21vh;
 }
 .banner-title h1 {
     color: black;
-    text-shadow: 0vh 0vh 0.5vh black;
+    text-shadow: 0vh 0vh 0.4vh black;
 }
-.banner-title h2{
+.banner-title h2 {
     color: yellowgreen;
-    text-shadow: 0vh 0vh 0.5vh black;
+    text-shadow: 0vh 0vh 0.4vh black;
 }
 .banner-image{
     position: relative;
-    top: -0.6vh;
+    top: -0.4vh;
+    left: 150px;
     width: 15vh;
 }
 .banner-image1{
-    position: relative;
-    top: -1vh;
     width: 35vh;
 }
