--- a/stylesCSS/main-content.css
+++ b/stylesCSS/main-content.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 .backgroundMain {
-    background-color: #FFDEE9;
-    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+    background-color: #defbff;
+    background-image: linear-gradient(180deg, #defbff 70%, #ccffdc 100%);    
 }
 .title-main {
     position: relative;
