--- a/stylesCSS/banner.css
+++ b/stylesCSS/banner.css
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     padding: 0px 15px;
+    flex-wrap: wrap;
 }
 .banner-title{
     font-family: 'Montserrat', sans-serif;
@@ -35,7 +36,7 @@
     position: relative;
     top: -0.4vh;
     left: 150px;
-    width: 15vh;
+    width: 14vh;
 }
 .banner-image1{
     width: 35vh;
